# agenticraft

./: .coveragerc_safe  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  EXPERIMENTAL_FEATURES.md  MCP_QUICKSTART.md  Makefile  README.md  SECURITY.md  SETUP_COMPLETE.md  STABLE_FEATURES.md  TEST_RESULTS_DAY5.md  analyze_modules_to_move.sh  badges.md  constraints.txt  core_coverage_safe.txt  coverage_full_report.txt  coverage_report.txt  create_week2_structure.sh  day5_actions.sh  diagnose_hanging_tests.sh  index.html  init_git.sh  make_executable.sh  mkdocs-simple.yml  mkdocs.yml  move_experimental_modules.sh  objects.inv  pyproject.toml  pytest.ini  quick_coverage_fix.sh  quick_test_fix.sh  requirements-dev.txt  requirements-fabric.txt  requirements-minimal.txt  (+10 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  (+3 more)
agenticraft/: __init__.py
changelog/: index.html
contributing/: index.html
docs/: DEVELOPMENT_HISTORY.md  IMPORT_FIXES_SUMMARY.md  PROTOCOL_INTEGRATION.md  changelog.md  gen_ref_pages.py  index.md  quickstart.md
examples/: 01_hello_world.py  02_simple_chatbot.py  a2a_protocols_demo.py  index.html  production_demo.py  security_integration_demo.py  security_sandbox_demo.py  security_sandbox_example.py
exported_code/: workflow_1.py
philosophy/: index.html
plugin-development/: index.html
pypi-publishing/: index.html
quickstart/: index.html
reference/: index.html
scripts/: build_package.sh  cleanup_temp_files.py  install_dev.sh  run_all_tests.py  setup_dev.sh  test.sh  test_core_clean.py  test_core_modules.py  test_full_suite.py  test_report.py  test_runner.py  test_status.py  test_workflow.py  upload_pypi.sh  upload_testpypi.sh  validate_env.py
search/: search_index.json
templates/: README.md
tests/: __init__.py  check_docs_quality.py  conftest.py  test_a2a_fix.py  test_a2a_hybrid_fix.py  test_agent.py  test_agent_comprehensive.py  test_all_sdk_fixes.py  test_auth.py.bak  test_basic.py  test_cli_main.py  test_cli_new.py  test_cli_run.py  test_code_examples.py  test_config.py  test_config_integration.py  test_examples_integration.py  test_exceptions_comprehensive.py  test_final_adapter_fixes.py  test_memory.py  test_memory_comprehensive.py  test_minimal.py  test_mock_fix.py  test_name_parsing.py  test_plugin_comprehensive.py  test_provider_comprehensive.py  test_reasoning_comprehensive.py  test_refactoring.py  test_refactoring_complete.py  test_sandbox_basic.py  test_sdk_integration.py  test_sdk_integration_fix.py  test_security_full.py  test_security_imports.py  test_specialized_agents.py  test_streaming.py  test_structure.py  test_telemetry_comprehensive.py  test_timeout.py  test_tool.py  (+9 more)
tools/: README.md  mcp_review_tool.py
workflow/: index.html
(+720 files in other folders)
